--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-html
-body
-¡Hola, persona estupenda!
-/body
-/html
+<html>
+
+  <body>
+  
+    <¡Hola, persona estupenda!>
+
+      </body>
+  
+    </html>
