--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   
   <head>
     
-    <tile>Mi genial página web</title>
+    <title>Mi genial página web</title>
  
   </head>
-
+ 
   <body>
-  
+    
     <¡Hola, persona estupenda!>
 
       </body>
