poner una imagen a m página

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
  
   <body>
-    <h1>
+    <imgs src="https://avatars1.githubusercontent.com/u/55248153?v=4">
+    
+      <h1>
     
     <¡Hola, persona estupenda!>
 
