--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <imgs src="https://avatars1.githubusercontent.com/u/55248153?v=4">
     
       <h1>
-    
+<img src="https://avatars1.githubusercontent.com/u/55248153?v=4">
+
     <¡Hola, persona estupenda!>
 
       </body>
