Crear una lista

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <h1>
 <img src="https://avatars1.githubusercontent.com/u/55248153?v=4">
 
+        <ol>
+          <li>Google</li>
+          <li>Twitter</li>
+          <li>eldiario.es</li>
+        </ol>
     <¡Hola, persona estupenda!>
 
       </body>
