--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ol>
           <li>Google</li>
           <li>Twitter</li>
-          <li>eldiario.es</li>
+      <li>Mi sitio favorito es <a href="https://github.com">GitHub</a></li>
         </ol>
     <¡Hola, persona estupenda!>
 
